--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,11 @@
-<nav class="navbar">
+<nav class="navbar"></nav>
     <div class="container">
         <nav>
             <b>
-                <a href="/">Home</a>
-                <a href="/about">About</a>
-                <a href="/student">Student</a>
-                <a href="/teacher">Teacher</a>
+                <a href="/">Home</a> &nbsp; &nbsp; &nbsp;
+                <a href="/about">About</a> &nbsp; &nbsp; &nbsp;
+                <a href="/student">Student</a> &nbsp; &nbsp; &nbsp;
+                <a href="/teacher">Teacher</a> &nbsp; &nbsp; &nbsp;
                 <a href="/courses">Courses</a>
             </b>
         </nav>
