--- a/public/bajablast.css
+++ b/public/bajablast.css
@@ -99,7 +99,7 @@ footer {
 }
 
 /* create styles */
-.create-blog form{
+  .create-blog form{
     max-width: 400px;
     margin: 0 auto;
   }
@@ -136,7 +136,7 @@ footer {
   }
 
   .delete{
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     border-radius: 50%;
@@ -145,7 +145,23 @@ footer {
   .delete:hover{
     cursor: pointer;
     box-shadow: 1px 2px 3px rgba(173, 5, 5, 0.2);
+    color: white;
+    background-color: blue;
   }
+  .update{
+    position: relative;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    padding: 8px;
+  }
+  .update:hover{
+    cursor: pointer;
+    box-shadow: 1px 2px 3px rgba(173, 5, 5, 0.2);
+    color: white;
+    background-color: blue;
+  }
+
   .content{
     margin-left: 20px;
   }
@@ -163,5 +179,6 @@ footer {
     position: relative;
   }
 
+  
 
 
