--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,7 +11,7 @@
             </b>
         </nav>
 
-        <img class="image" src='img/logo.png' alt="Logo Image" style="padding:20px;width:100%;height:500px;">
+        <img class="image" src='/img/logo.png' alt="Logo Image" style="padding:20px;width:100%;height:500px;">
         
     </div>
 </nav>
