--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -63,9 +63,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="btns">
+                        <!-- <div class="btns">
                             <button class="close">CLOSE</button>
-                        </div>
+                        </div> -->
                     </div>
                 <% } %>
         </section>
