--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,6 +10,7 @@
                         <li>Welcome, <%= user.email %>! </li> &nbsp; &nbsp; &nbsp;
                         <li><a href="/about">About</a></li> &nbsp; &nbsp; &nbsp;
                         <li><a href="/courses">Courses</a></li> &nbsp; &nbsp; &nbsp;
+                        <li><a href="/myCourses">My Courses</a></li> &nbsp; &nbsp; &nbsp;
                         <li><a href="/logout" class="navbtn">Logout</a></li> &nbsp; &nbsp; &nbsp;
 
                     <% } else { %>
